--- a/index.html
+++ b/index.html
@@ -3,22 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Penpot plugin example</title>
+    <title>TrueNAS Penpot Plugin</title>
+    <link id="theme" href="css/main.css?ts=1748868958905" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <p>Penpot plugin starter template</p>
+    <p>Enclosure Drivetray Selector</p>
 
-    <p>
-      Checkout the
-      <a target="_blank" href="https://help.penpot.app/plugins/"
-        >documentation</a
-      >
-      to get started.
-    </p>
+    <div class="form-group">
+      <label class="select-label-hidden" for="enclosure-select">Choose an enclosure component instance:</label>
+      <select id="enclosure-select" class="select">
+      </select>
 
-    <button type="button" data-appearance="primary" data-handler="create-text">
-      Create text
-    </button>
+      <button class="aux-button" type="button" data-appearance="secondary" data-handler="list-enclosures">
+        Refresh 
+      </button>
+    </div>
+
+      <div class="form-group">
+        <label class="input-label-hidden" for="input-3">Select a range of slots</label>
+        <input id="slot-range" class="input" type="text" placeholder="Slot Range eg. 01-12">
+      </div>
+
+    <div class="form-group form-actions">
+      <button type="button" data-appearance="primary" data-handler="select-all-drivetray-handles">
+        Apply Selection
+      </button>
+    </div>
 
     <script type="module" src="/src/main.ts"></script>
   </body>
